k8s/local/panel.yaml
apiVersion: v1
kind: Service
metadata:
  name: panel
  namespace: yin-dev
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: panel-local
  namespace: yin-dev
  labels:
    kubernetes.io/service-name: panel
    endpointslice.kubernetes.io/managed-by: tilt
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3000
endpoints: []
